--- a/pixelegg/less/layout_raster_main.less
+++ b/pixelegg/less/layout_raster_main.less
@@ -133,6 +133,7 @@
 				}
 				// aktive Bilder
 				img.egw_fw_ui_tab_icon {
+					padding-top: 3px;
 					display: inline-block;
 					.dimension_width_height_s;
 				}
