--- a/pixelegg/less/layout_raster_sidebar.less
+++ b/pixelegg/less/layout_raster_sidebar.less
@@ -325,8 +325,8 @@
 				left: 0px;
 				top: 3px;
 				width: 35px;
-				height: 4px;
-				background-color: #606060;
+				height: 3px;
+				background-color: #b4b4b4;
 				backface-visibility: hidden;
 				border-radius: 2px;
 			}
@@ -339,17 +339,28 @@
 				-ms-transform: rotate(-145deg) translate(8px, 2px);
 				-moz-transform: rotate(-145deg) translate(8px, 2px);
 				-webkit-transform: rotate(-145deg) translate(8px, 2px);
-				background-color: #606060;
+				background-color: #b4b4b4;
 			}
+
 			background-color: transparent;
 			position: relative;
 			display: block;
 			width: 35px;
-			height: 5px;
+			height: 3px;
 			backface-visibility: hidden;
 			border-radius: 2px;
 			top: 11px;
 			left: 10px;
+		}
+		&:hover {
+			span {
+				&:before {
+					background-color: #606060;
+				}
+				&:after {
+					background-color: #606060;
+				}
+			}
 		}
 	}
 }
@@ -369,7 +380,7 @@
 				-moz-transform: none;
 				-webkit-transform: none;
 				width:35px;
-				height:5px;
+				height:3px;
 				background-color: #b4b4b4;
 			}
 			&:before {
